[package]
name = "type-test-server"
version = "0.1.0"
authors = ["silmeth <sth.jaworski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version = "1.3", features = ["full"] }
hyper = "0.14.4"
routerify = "2.0"
form_urlencoded = "1.0"
